[REFACTOR] Refactor ReviewControllerTest to accomodate new fungsionality